[add] done with opt  and sending emails
