# backend/src/routes/auth.route.ts
@@ -1,10 +1,23 @@
 import { Router } from "express";
 import authController from "../controllers/auth.controller";
-import { LoginDTO } from "../dtos/auth.dto";
+import { LoginDTO, ResendOtpDTO, VerifyOtpDTO } from "../dtos/auth.dto";
 import { validationMiddleware } from "../middlewares/validator.middleware";
 
-const authRouter = Router()
+const authRouter = Router();
 
-authRouter.post("/login", [validationMiddleware(LoginDTO)], authController.login)
-
-export default authRouter
+authRouter.post(
+  "/login",
+  [validationMiddleware(LoginDTO)],
+  authController.login
+);
+authRouter.put(
+  "/verify-otp",
+  [validationMiddleware(VerifyOtpDTO)],
+  authController.verifyOtp
+);
+authRouter.post(
+  "/resend-otp",
+  [validationMiddleware(ResendOtpDTO)],
+  authController.resendOtp
+);
+export default authRouter;
